# LMS_Project

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
apps/assessments/: apps.py  forms.py  models.py  urls.py  views.py
apps/assessments/migrations/: 0001_initial.py  0002_alter_assessment_options_and_more.py  0003_alter_assessment_unique_together_and_more.py  0004_alter_assessment_unique_together.py  0005_alter_assessment_lesson_and_more.py  0006_question.py
apps/assessments/test/: test_views.py
apps/courses/: admin.py  factories.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_alter_lesson_content_enrollment_course_students_and_more.py  0003_seed_initial_data.py  0004_alter_course_options_and_more.py
apps/courses/tests/: test_permissions.py  test_views.py
apps/users/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_avatar.py
apps/users/tests/: conftest.py  test_forms.py  test_models.py
config/: urls.py
config/settings/: base.py  local.py  production.py
libs/: models.py
static/css/: main.css
static/css/base/: _reset.css  _variables.css
static/css/components/: _forms.css  _ui.css
static/css/layout/: _navbar.css
static/css/pages/: _assessments.css  _auth.css  _course_detail.css  _courses.css  _lesson_detail.css  _profile.css
templates/: base.html
templates/assessments/: assessment_form.html
templates/courses/: course_detail.html  course_form.html  course_list.html  lesson_detail.html
templates/includes/: _navbar.html
templates/users/: login.html  password_reset.html  profile.html  register.html
