[project]
name = "evolaris-academy"
version = "0.1.0"
description = "LMS Profesional con Django 6"
authors = [
    {name = "Daniel Granada"}
]
license = {text = "MIT"}
requires-python = "^3.14"
dependencies = [
    "django (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]
